# gpa-question-webapp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TODOS.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_regulations_explanations.py  003_drop_regulations_explanations.py
src/api/: main.py
src/api/routes/: categories.py  explanations.py  questions.py  sessions.py
src/ingestion/: base.py  cli.py  doc_parser.py  pdf_parser.py  regulation_seeder.py
src/models/: database.py  schemas.py
src/services/: llm.py
src/static/: style.css
src/templates/: base.html  index.html  practice.html  results.html  weakness.html
tests/: conftest.py  test_api.py  test_ingestion.py
